updated training script

--- a/training-llama/tuning_llama3.ipynb
+++ b/training-llama/tuning_llama3.ipynb
@@ -8,7 +8,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26a5ea74-5669-499f-ba01-0990d81aea74"
+        "outputId": "26a5ea74-5669-499f-ba01-0990d81aea74",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -197,7 +198,8 @@
           ]
         },
         "id": "QmUBVEnvCDJv",
-        "outputId": "299b397c-daa1-4370-c9ca-1a0e66526947"
+        "outputId": "299b397c-daa1-4370-c9ca-1a0e66526947",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -322,15 +324,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "We now add LoRA adapters so we only need to update 1 to 10% of all parameters!"
-      ],
-      "metadata": {
-        "id": "SXd9bTZd1aaL"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -338,7 +331,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c862ab90-92c4-4d8a-9be3-dfba27fd7142"
+        "outputId": "c862ab90-92c4-4d8a-9be3-dfba27fd7142",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -364,35 +358,6 @@
         "    loftq_config = None\n",
         ")"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<a name=\"Data\"></a>\n",
-        "### Data Prep\n",
-        "We now use the `Llama-3` format for conversation style finetunes. We use [Open Assistant conversations](https://huggingface.co/datasets/philschmid/guanaco-sharegpt-style) in ShareGPT style. Llama-3 renders multi turn conversations like below:\n",
-        "\n",
-        "```\n",
-        "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
-        "\n",
-        "Hello!<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-        "\n",
-        "Hey there! How are you?<|eot_id|><|start_header_id|>user<|end_header_id|>\n",
-        "\n",
-        "I'm great thanks!<|eot_id|>\n",
-        "```\n",
-        "\n",
-        "**[NOTE]** To train only on completions (ignoring the user's input) read TRL's docs [here](https://huggingface.co/docs/trl/sft_trainer#train-on-completions-only).\n",
-        "\n",
-        "We use our `get_chat_template` function to get the correct chat template. We support `zephyr, chatml, mistral, llama, alpaca, vicuna, vicuna_old` and our own optimized `unsloth` template.\n",
-        "\n",
-        "Note ShareGPT uses `{\"from\": \"human\", \"value\" : \"Hi\"}` and not `{\"role\": \"user\", \"content\" : \"Hi\"}`, so we use `mapping` to map it.\n",
-        "\n",
-        "For text completions like novel writing, try this [notebook](https://colab.research.google.com/drive/1ef-tab5bhkvWmBOObepl1WgJvfvSzn5Q?usp=sharing)."
-      ],
-      "metadata": {
-        "id": "vITh0KVJ10qX"
-      }
     },
     {
       "cell_type": "code",
@@ -438,7 +403,8 @@
             "b9b59f8e005c48ee9fabc38901494423"
           ]
         },
-        "outputId": "bc9f891f-9de0-4397-e773-d802adfe0a1c"
+        "outputId": "bc9f891f-9de0-4397-e773-d802adfe0a1c",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -514,7 +480,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U5iEWrUkevpE",
-        "outputId": "b52d8468-8c3b-4b20-b00b-f8f0df8eaaef"
+        "outputId": "b52d8468-8c3b-4b20-b00b-f8f0df8eaaef",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -558,7 +525,8 @@
             "4104032868464401bf7b1468bd15d9f7"
           ]
         },
-        "outputId": "4c48cf40-86f7-4911-c31e-abc9a1cd8548"
+        "outputId": "4c48cf40-86f7-4911-c31e-abc9a1cd8548",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -631,7 +599,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "bd29a1f4-0639-421f-f20b-7569a7d92a18"
+        "outputId": "bd29a1f4-0639-421f-f20b-7569a7d92a18",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -1114,7 +1083,8 @@
             "67852a35bc3e412da5677a927a88d45d"
           ]
         },
-        "outputId": "e4bce8ed-b720-4b55-edf1-544b4a7b940b"
+        "outputId": "e4bce8ed-b720-4b55-edf1-544b4a7b940b",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -1185,7 +1155,8 @@
             "96d97473f591408e96f81369fe44e6d0"
           ]
         },
-        "outputId": "09fe4f75-a9c5-4a9a-b9ca-fd3cc64ede96"
+        "outputId": "09fe4f75-a9c5-4a9a-b9ca-fd3cc64ede96",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
